--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luyen Tap Java</title>
 </head>
-    <script>
-        alert('Hello world Java')
+    <script src="./video2/video2.js">
+        
     </script>
 <body>
     <h1> Hello World from HTLM</h1>
